==> Jaimead7/Potentiostat/device/arduino/Potentiostat/Cycles.cpp <==
#include  "Cycles.h"

  void Potentiometry::cycle() {
    /*
    Cycle loop for the potentiometry.
    Call it cyclically on the main loop.
    */
    uint32_t now = millis();
    if (run) {
      if (!started) {
        pCircuit->setWEVoltage(voltageSP);
        checkStart();
      } else {
        if (now - initTime < duration) {
          if (taskDelay <= now - lastRead) {
            pCircuit->readAndTransmit(PT_CMD);
            lastRead = now;
          }
        } else {
          ledsResult();
          pCircuit->setWEVoltage(0.0);
          run = false;
          Serial.println(PT_CMD + END_CMD);
        }
      }
    } else {
      started = false;
    }
  }

  void  Potentiometry::ledsResult() {
    /*
    Show result on the board leds
    */
    float value = pCircuit->readWECurrent();
    digitalWrite(GREEN_LED_PIN, LOW);
    digitalWrite(YELLOW_LED_PIN, LOW);
    digitalWrite(RED_LED_PIN, LOW);
    if (value >= redLimit) {
      digitalWrite(RED_LED_PIN, HIGH);
      delay (6000);
      digitalWrite(RED_LED_PIN,LOW);
    } else if (value >= yellowLimit) {
      digitalWrite(YELLOW_LED_PIN, HIGH);
      delay (6000);
      digitalWrite(YELLOW_LED_PIN, LOW);
    } else {
      digitalWrite(GREEN_LED_PIN, HIGH);
      delay (6000);
      digitalWrite(GREEN_LED_PIN, LOW);
    }
  }

  void CyclicVoltammetry::cycle() {
    /*
    Cycle loop for the cyclic voltammetry.
    Call it cyclically on the main loop.
    */
    if (run) {
      if (!started) {
        setStartConditions();
        started = true;
      } else {
        if (taskDelay <= millis() - lastVoltChange && currentCycle < totalCycles) {
          pCircuit->readAndTransmit(CV_CMD + CURRENT_CYCLE_CMD + String(currentCycle + 1) + ",");
          changeVoltage();
        }
        checkEnd();
      }
    } else {
      started = false;
    }
  }

  void  CyclicVoltammetry::ledsResult() {
    /*
    Show result on the board leds
    */
    float value = 0;
    digitalWrite(GREEN_LED_PIN, LOW);
    digitalWrite(YELLOW_LED_PIN, LOW);
    digitalWrite(RED_LED_PIN, LOW);
    if (value >= redLimit) {
      digitalWrite(RED_LED_PIN, HIGH);
      delay (6000);
      digitalWrite(RED_LED_PIN,LOW);
    } else if (value >= yellowLimit) {
      digitalWrite(YELLOW_LED_PIN, HIGH);
      delay (6000);
      digitalWrite(YELLOW_LED_PIN, LOW);
    } else {
      digitalWrite(GREEN_LED_PIN, HIGH);
      delay (6000);
      digitalWrite(GREEN_LED_PIN, LOW);
    }
  }

  void SquareWaveVoltammetry::cycle() {
    /*
    Cycle loop for the squarer wave voltammetry.
    Call it cyclically on the main loop.
    */
    if (run) {
      if (!started) {
        setStartConditions();
      } else {
        changeVoltage();
        checkEnd();
      }
    } else {
      started = false;
    }
  }

  void  SquareWaveVoltammetry::ledsResult() {
    /*
    Show result on the board leds
    */
    float value = iFordward - iReverse;
    digitalWrite(GREEN_LED_PIN, LOW);
    digitalWrite(YELLOW_LED_PIN, LOW);
    digitalWrite(RED_LED_PIN, LOW);
    if (value >= redLimit) {
      digitalWrite(RED_LED_PIN, HIGH);
      delay (6000);
      digitalWrite(RED_LED_PIN,LOW);
    } else if (value >= yellowLimit) {
      digitalWrite(YELLOW_LED_PIN, HIGH);
      delay (6000);
      digitalWrite(YELLOW_LED_PIN, LOW);
    } else {
      digitalWrite(GREEN_LED_PIN, HIGH);
      delay (6000);
      digitalWrite(GREEN_LED_PIN, LOW);
    }
  }
