==> Jaimead7/Potentiostat/device/esp32/Potentiostat/Cycles.cpp <==
#include  "Cycles.h"

  void  Potentiometry::cycle() {
    /*
    Cycle loop for the potentiometry.
    */
    vTaskSuspend(task);
    while (true) {
      stop = false;
      start();
      while (millis() - initTime < duration && !stop) {
        pCircuit->readAndTransmit(PT_CMD);
        gLed->resetTime();
        yLed->resetTime();
        rLed->resetTime();
        delay(taskDelay);
      }
      float raw, filtered;
      pCircuit->readWECurrent(raw, filtered);
      ledsResult();
      stop = false;
      pCircuit->setWEVoltage(0.0);
      Serial.println(PT_CMD + END_CMD + String(filtered, 3));
      vTaskSuspend(task);
    }
  }

  void  Potentiometry::ledsResult() {
    /*
    Show result on the board leds
    */
    float raw, filtered;
    pCircuit->readWECurrent(raw, filtered);
    if (filtered >= redLimit) {
      rLed->blink(float(stop * 3), 5., 0.);
    } else if (filtered >= yellowLimit) {
      yLed->blink(float(stop * 3), 5., 0.);
    } else {
      gLed->blink(float(stop * 3), 5., 0.);
    }
  }

  void CyclicVoltammetry::cycle() {
    /*
    Cycle loop for the cyclic voltammetry.
    */
    vTaskSuspend(task);
    while (true) {
      stop = false;
      start();
      while (currentCycle < totalCycles && !stop) {
        pCircuit->readAndTransmit(CV_CMD + CURRENT_CYCLE_CMD + String(currentCycle + 1) + ",");
        changeVoltage();
        gLed->resetTime();
        yLed->resetTime();
        rLed->resetTime();
        delay(taskDelay);
      }
      ledsResult();
      stop = false;
      pCircuit->setWEVoltage(0.0);
      Serial.println(CV_CMD + END_CMD);
      vTaskSuspend(task);
    }
  }

  void  CyclicVoltammetry::ledsResult() {
    float value = 0;
    if (value >= redLimit) {
      rLed->blink(float(stop * 3), 5., 0.);
    } else if (value >= yellowLimit) {
      yLed->blink(float(stop * 3), 5., 0.);
    } else {
      gLed->blink(float(stop * 3), 5., 0.);
    }
  }

  void SquareWaveVoltammetry::cycle() {
    /*
    Cycle loop for the square wave voltammetry.
    */
    vTaskSuspend(task);
    while (true) {
      stop = false;
      start();
      while (!checkEnd() && !stop) {
        transmit();
        changeVoltage();
        gLed->resetTime();
        yLed->resetTime();
        rLed->resetTime();
        delay(taskDelay);
      }
      ledsResult();
      stop = false;
      pCircuit->setWEVoltage(0.0);
      Serial.println(SWV_CMD + END_CMD);
      vTaskSuspend(task);
    }
  }

  void  SquareWaveVoltammetry::ledsResult() {
    float value = iFordward - iReverse;
    if (value >= redLimit) {
      rLed->blink(float(stop * 3), 5., 0.);
    } else if (value >= yellowLimit) {
      yLed->blink(float(stop * 3), 5., 0.);
    } else {
      gLed->blink(float(stop * 3), 5., 0.);
    }
  }
